seed-service/target/release/build/atomic-f33e31a0fa46a38d/stderr
error[E0433]: failed to resolve: could not find `AtomicU128` in `atomic`
 --> <anon>:1:46
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicU128::compare_exchange; }
  |                                              ^^^^^^^^^^ could not find `AtomicU128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error[E0433]: failed to resolve: could not find `AtomicI128` in `atomic`
 --> <anon>:1:46
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicI128::compare_exchange; }
  |                                              ^^^^^^^^^^ could not find `AtomicI128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error[E0433]: failed to resolve: could not find `AtomicU128` in `atomic`
 --> <anon>:1:45
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicU128::compare_exchange; }
  |                                             ^^^^^^^^^^ could not find `AtomicU128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error[E0433]: failed to resolve: could not find `AtomicI128` in `atomic`
 --> <anon>:1:45
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicI128::compare_exchange; }
  |                                             ^^^^^^^^^^ could not find `AtomicI128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
